--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
         <a href="formation.html">Formations</a>
         <a href="compétences.html">Compétences</a>
         <a href="projets.html">Projets</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <section id="accueil"  style="text-align: center;">
@@ -174,9 +175,7 @@
     </section>
     
     <footer>
-        <p>2023 Cousin Mathias - CV Numérique<br><br>
-            email : mathias.cousin.etu@univ-lille.fr</li>
-        </p>
+        <p>2023-2024 Cousin Mathias - CV Numérique</p>
     </footer>
 
 </body>
