--- a/compétences.html
+++ b/compétences.html
@@ -156,6 +156,7 @@
         <a href="formation.html">Formations</a>
         <a href="compétences.html">Compétences</a>
         <a href="projets.html">Projets</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <section id="competence"  style="text-align: center;">
@@ -201,9 +202,7 @@
     
         
     <footer>
-        <p>2023 Cousin Mathias - CV Numérique<br><br>
-            email : mathias.cousin.etu@univ-lille.fr</li>
-        </p>
+        <p>2023-2024 Cousin Mathias - CV Numérique</p>
     </footer>
 
 </body>
